Stualização do index adicionada.

--- a/flask/project/templates/flask.html
+++ b/flask/project/templates/flask.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-    <title> Tutsplus - Pygal Charting Library</title>
+    <title> Aquario</title>
+    <script>
+        setInterval(function atualizar() {location.reload()}, 60000);
+    </script>
 </head>
 
 <body>
